Wed Oct 10 01:22:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py,perftest/searcher.py: Add use_or option to
	  search runs, and do an "OR" run by default.

Tue Oct 09 16:03:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Expand documentation comment to
	  explain the distinction between default_{allow,deny} and
	  {allow,deny}.

Tue Oct 09 15:36:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: Add "--usedb" parameter - if supplied, a
	  ready made DB is assumed to be at that path, and no index run
	  will be done.

Tue Oct 09 15:10:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: If pylab isn't available, don't call the
	  analyse_* functions (and don't produce pretty graphs, as a
	  result).

Tue Oct 09 14:55:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* README,docs/introduction.rst: Update comments about the version
	  of Xapian which is required.

Tue Oct 09 02:14:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/running_perftest.txt: More instructions.

Tue Oct 09 02:05:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/running_perftest.txt: Add some notes on running the
	  performance tests, with wikipedia data.

Tue Oct 09 01:48:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: More tidying, ready for running big tests
	  against wikipedia.

Tue Oct 09 01:32:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/searcher.py: Tidy up headings.

Tue Oct 09 01:21:38 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Sort out search side of performance tests.

Mon Oct 08 23:46:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Tidy up, towards making automated performance tests
	  runnable just by running a single script.  Fix graph drawing for