@@ -1,3 +1,8 @@
+Wed Oct 10 01:25:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* perftest/perftest.py: Remove facet and tags test runs - we don't
+	  have the data needed to make them run, anyway.
+
 Wed Oct 10 01:22:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* perftest/perftest.py,perftest/searcher.py: Add use_or option to
